# finance_bot

./: .env.example  .gitignore  QUICKSTART.md  README.md  README_OPTIMIZED.md  TESTING_GUIDE.md  USAGE_GUIDE.md  check_config.py  cleaned_transcript_output.md  cli_tool.py  config copy.yaml  debug_feishu.py  detect_region.py  download_and_upload.py  investment_diary_output.md  last_oss_url.txt  main.py  manual_run.py  mock_content.json  mock_feishu_url.txt  mock_transcript.json  pyproject.toml  result_diarization_mode.txt  run.py  test_feishu_integration.py  test_final_pipeline.py  test_full_transcription.py  test_manual_process.py  test_mock_data.py  test_mock_pipeline.py  test_qwen_summary.py  test_tingwu_functionality.py  test_tingwu_tuning.py  test_transcription.py  test_whisper_transcription.py  test_xyfun_local.py  verify_tingwu_setup.py  xfyun_llm_result_1768144331.txt  xfyun_llm_result_1768145115.txt  xfyun_llm_result_1768743884.txt
src/: __init__.py  pipeline.py
src/downloader/: __init__.py  audio_extractor.py  bilibili_monitor.py  downloader.py
src/feishu_renderer/: __init__.py  block_builder.py  document_renderer.py  feishu_client.py  feishu_renderer.py
src/llm_processor/: __init__.py  content_analyzer.py  llm_processor.py  qwen_client.py
src/transcriber/: __init__.py  dashscope_client.py  tingwu_client.py  transcriber.py  transcript_processor.py  whisper_transcriber.py
src/utils/: __init__.py  config.py  logger.py  monitor.py  retry.py  storage.py  validator.py
tests/: __init__.py  test_config.py
tests/manual/: sitecustomize.py  test_blocks.py  (+12 more)
